force-app/main/default/objects/Nachtrag__c/Nachtrag__c.object-meta.xml
<CustomObject>
    <label>Objektfreischaltung</label>
    <nameField>
        <displayFormat>Nachtrag-{00000}</displayFormat>
        <label>Objektfreischaltung-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objektfreischaltungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>