force-app/main/default/objects/Nachtrag__c/fields/Datum_Uhrzeit_akzeptiert__c.field-meta.xml
<CustomField>
    <fullName>Datum_Uhrzeit_akzeptiert__c</fullName>
    <label>Datum/Uhrzeit akzeptiert</label>
    <type>DateTime</type>
</CustomField>