force-app/main/default/objects/Nachtrag__c/fields/E_Mail_Immobenutzer__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Immobenutzer__c</fullName>
    <label>E-Mail Immobenutzer</label>
    <type>Email</type>
</CustomField>