force-app/main/default/objects/Nachtrag__c/fields/E_Mail_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Mail Opt-In</label>
    <type>Checkbox</type>
</CustomField>