force-app/main/default/objects/Nachtrag__c/fields/E_Mail_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Verification_Code__c</fullName>
    <label>E-Mail Verification Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>