force-app/main/default/objects/Nachtrag__c/fields/Immo_Benutzer__c.field-meta.xml
<CustomField>
    <fullName>Immo_Benutzer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immo Benutzer</label>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipLabel>Nachträge</relationshipLabel>
    <relationshipName>Nachtr_ge</relationshipName>
    <type>Lookup</type>
</CustomField>