force-app/main/default/objects/Nachtrag__c/fields/IP_Adresse__c.field-meta.xml
<CustomField>
    <fullName>IP_Adresse__c</fullName>
    <label>IP Adresse</label>
    <length>55</length>
    <type>Text</type>
</CustomField>